--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script type="importmap">
 {
   "imports": {
+    "react-dom": "https://aistudiocdn.com/react-dom@^18.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^18.2.0/",
     "react-dom/server": "https://aistudiocdn.com/react-dom@^18.2.0/server.browser",
     "react/": "https://aistudiocdn.com/react@^18.2.0/",
@@ -19,7 +20,7 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.78.0",
     "leaflet": "https://esm.sh/leaflet@1.9.4",
-    "react-leaflet": "https://esm.sh/react-leaflet@4.2.1"
+    "react-leaflet": "https://esm.sh/react-leaflet@4.2.1?external=react,react-dom"
   }
 }
 </script>
